[gd_scene load_steps=10 format=2]

[ext_resource path="res://Platform/Asset/Sprites/kenney-backgroundelements/PNG/castle_wall.png" type="Texture" id=1]
[ext_resource path="res://Platform/Theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Platform/Scene/UIBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Platform/Scene/UI/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://Platform/Scene/UI/ClickSound.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "wiggle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ 6.0, -6.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Button:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button2:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "option_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Button:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button2:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="UIBackground" parent="." instance=ExtResource( 3 )]

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="UI"]
margin_left = 812.0
margin_top = 200.0
margin_right = 1107.0
margin_bottom = 338.0
rect_rotation = 6.0
rect_pivot_offset = Vector2( 148, 71 )
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Title"]
autoplay = "wiggle"
anims/RESET = SubResource( 1 )
anims/wiggle = SubResource( 2 )

[node name="Menu" type="Control" parent="UI"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 542.0
size_flags_vertical = 2

[node name="Button" type="VBoxContainer" parent="UI/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )

[node name="StartButton" type="Button" parent="UI/Menu/Button"]
margin_left = 908.0
margin_right = 992.0
margin_bottom = 31.0
size_flags_horizontal = 4
text = "开始"

[node name="OptionButton" type="Button" parent="UI/Menu/Button"]
margin_left = 908.0
margin_top = 61.0
margin_right = 992.0
margin_bottom = 92.0
size_flags_horizontal = 4
text = "选项"

[node name="QuitButton" type="Button" parent="UI/Menu/Button"]
margin_left = 908.0
margin_top = 122.0
margin_right = 992.0
margin_bottom = 153.0
size_flags_horizontal = 4
text = "结束"

[node name="Button2" type="VBoxContainer" parent="UI/Menu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 2 )

[node name="BGMButton" type="Button" parent="UI/Menu/Button2"]
margin_right = 196.0
margin_bottom = 31.0
size_flags_horizontal = 4
text = "音乐：开"

[node name="SFXButton" type="Button" parent="UI/Menu/Button2"]
margin_top = 61.0
margin_right = 196.0
margin_bottom = 92.0
size_flags_horizontal = 4
text = "音效：开"

[node name="BackButton" type="Button" parent="UI/Menu/Button2"]
margin_left = 56.0
margin_top = 122.0
margin_right = 140.0
margin_bottom = 153.0
size_flags_horizontal = 4
text = "返回"

[node name="Transition" type="AnimationPlayer" parent="UI/Menu"]
anims/RESET = SubResource( 3 )
anims/option_menu = SubResource( 4 )

[node name="ClickSound" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="UI/Menu/Button/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/Menu/Button/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="UI/Menu/Button/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/Menu/Button2/BGMButton" to="." method="_on_BGMButton_pressed"]
[connection signal="pressed" from="UI/Menu/Button2/SFXButton" to="." method="_on_SFXButton_pressed"]
[connection signal="pressed" from="UI/Menu/Button2/BackButton" to="." method="_on_BackButton_pressed"]
